tweaked css for adding nodes

--- a/src/app/organization/organization-selection.tpl.html
+++ b/src/app/organization/organization-selection.tpl.html
@@ -11,7 +11,7 @@
 				</md-tooltip>
 			</a>
 		</div>
-		<div class="organization active" layout="row" layout-align="start center" ng-if="organizationRow.length < 4">
+		<div class="organization add-node" layout="row" layout-align="start center" ng-if="organizationRow.length < 4">
 			<a href class="tree-node" ng-click="vm.addOrganization()" aria-label="cancel">
 				Add <i class="fa fa-plus"></i>
 			</a>
