--- a/src/app/tree/node-modal-dashboard.tpl.html
+++ b/src/app/tree/node-modal-dashboard.tpl.html
@@ -41,6 +41,13 @@
 					</md-checkbox>
 				</div>
 			</div>
+			<div layout="row" layout-align="center center" ng-if="modal.nodeType === 'Key Result'">
+				<div layout-align="start-start" layout="row" flex="100">
+					<md-switch ng-model="modal.node.priority" aria-label="Priority" ng-true-value="'High'" ng-false-value="'Low'" class="md-warn">
+					   {{modal.node.priority}} Priority
+					</md-switch>
+				</div>
+			</div>
 		</form>
 	<md-content>
 	<div class="md-actions" style="border-top: none;" layout="row" layout-align="center end">
