--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -58,7 +58,7 @@
 	        </div>
 		</div>
 		<div class="objective add-node" layout="row" layout-align="start" ng-if="vm.tree.Objectives.length !== 4">
-			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Objective', {})" class="tree-node" layout-align="start">
+			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Objective', {}, false)" class="tree-node" layout-align="start">
 				Add Objective <i class="fa fa-plus"></i>
 			</a>
 		</div>
@@ -66,7 +66,7 @@
 
 	<!-- key results -->
 	<div layout="row" class="collapse" layout-align="center center" id="keyResultNode">
-		<div class="key-result" layout="row" layout-align="start" ng-repeat="keyResult in vm.currentObjective.key_results">
+		<div class="key-result" layout="row" layout-align="start" ng-repeat="keyResult in vm.currentObjective.KeyResults">
 			<div class="tree-node" ng-show="!keyResult.isEditMode">
 				{{keyResult.Name}}
 				<md-tooltip ng-if="keyResult.Name.length > 14">
@@ -95,15 +95,18 @@
 	        	</md-button>
 	        </div>
 		</div>
-		<div class="key-result" layout="row" layout-align="start" ng-if="vm.tree.currentObjective.key_results.length !== 4">
-			<div class="tree-node" layout-align="start">
+		<div class="key-result add-node" layout="row" layout-align="start" ng-if="vm.currentObjective.KeyResults.length !== 4">
+			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Key Result', {}, vm.currentObjective)" class="tree-node" layout-align="start">
 				Add Key Result <i class="fa fa-plus"></i>
-			</div>
+			</a>
 		</div>
 	</div>
 
 	<!-- Tasks -->
 	<div layout="column" class="collapse" ok-collapse linked-to="taskNode" layout-align="space-around center" all-linked-nodes="vm.linkedNodeIds" id="taskNode">
+		<div layout="row" layout-align="start center">
+			<md-button class="md-primary md-raised">Add Task <i class="fa fa-plus"></i></md-button>
+		</div>		
 		<div layout="row" layout-align="start center" ng-repeat="task in vm.currentKeyResult.tasks">
 			<md-checkbox ng-model="task.complete" aria-label></md-checkbox>
 			<div class="task-node">
