--- a/src/app/tree/node-modal-dashboard.tpl.html
+++ b/src/app/tree/node-modal-dashboard.tpl.html
@@ -1,7 +1,7 @@
 <md-dialog flex="30">
 	<div layout="row" layout-align="center">
 	    <md-subheader>
-	    	<h3>Create {{modal.name}}</h3>
+	    	<h3><span ng-if="!modal.editMode">Create</span> {{modal.name}}</h3>
 	    </md-subheader>
 	</div>
 	<md-content>
@@ -10,7 +10,7 @@
 		    	<div layout-align="start start" flex="100">
 					<md-input-container flex>
 					   <label>Name</label>
-					   <md-input required name="nodeName" ng-model="modal.node.name" autocapitalize="off"></md-input>
+					   <md-input required name="nodeName" ng-model="modal.node.Name" autocapitalize="off"></md-input>
 					</md-input-container>
 				</div>
 				<div class="error-msg ng-hide" layout-align="center end" ng-show="modal.formSubmitted && modal.nodeForm.nodeName.$invalid" ng-cloak>
@@ -24,7 +24,7 @@
 		    	<div layout-align="start start" flex="100">
 					<md-input-container flex>
 				        <label>Description</label>
-				    	<textarea required name="nodeBody" ng-model="modal.node.body" columns="1" md-maxlength="150"></textarea>
+				    	<textarea required name="nodeBody" ng-model="modal.node.Body" columns="1" md-maxlength="150"></textarea>
 				    </md-input-container>
 				</div>
 				<div class="error-msg ng-hide" layout-align="center end" ng-show="modal.formSubmitted && modal.nodeForm.nodeBody.$invalid" ng-cloak>
@@ -52,7 +52,8 @@
 	<md-content>
 	<div class="md-actions" style="border-top: none;" layout="row" layout-align="center end">
 		<md-button class="md-raised md-warn" ng-click="modal.closeModal()" aria-label="cancel">Cancel</md-button>
-		<md-button class="md-raised md-primary" ng-click="modal.createNode()" aria-label="add">Add Node</md-button>
+		<md-button ng-if="!modal.editMode" class="md-raised md-primary" ng-click="modal.createNode()" aria-label="add">Add {{modal.name}}</md-button>
+		<md-button ng-if="modal.editMode"class="md-raised md-primary" ng-click="modal.saveNode()" aria-label="add">Save</md-button>
 		<md-progress-circular ng-if="modal.currentlySaving" md-mode="indeterminate" md-diameter="20"></md-progress-circular>
 	</div>
 <md-dialog>
