--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -70,12 +70,12 @@
 	<!-- key results -->
 	<div layout="row" class="collapse" layout-align="center center" id="keyResultNode">
 		<div class="key-result" layout="row" layout-align="start" ng-repeat="keyResult in vm.currentObjective.KeyResults">
-			<div class="tree-node" ng-show="!keyResult.isEditMode">
+			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Key Result', keyResult, vm.currentObjective)" class="tree-node" ng-show="!keyResult.isEditMode">
 				{{keyResult.Name}}
 				<md-tooltip ng-if="keyResult.Name.length > 14">
 					{{keyResult.Name}}
 				</md-tooltip>
-			</div>
+			</a>
 			<div class="tree-node" layout-align="start" ng-show="keyResult.isEditMode">
 				<md-input-container>
 				   <md-input required class="short" name="treeName" ng-model="keyResult.newName" autocapitalize="off"></md-input>
