--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -319,3 +319,7 @@ ul.list-horizontal li span.sub-text {
   margin-left: 0px;
   margin-top: 15px !important;
 }
+
+md-radio-group md-radio-button:first-child {
+  margin-top: 15px !important;
+}
