--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -189,6 +189,7 @@ ul.list-horizontal {
 
 	.tree-node {
 		padding: 20px 20px;
+		position: relative;
 		background-color: $grey;
 		@include border-radius(5px);
 		color: $white;
@@ -225,30 +226,39 @@ ul.list-horizontal {
 		}
 	}
 
-	.objective:after {
-		content: "OBJ";
+	.objective {
+		.tree-node:after {
+			content: "OBJ";
+		}
 	}
 
-	.key-result:after {
-		content: "KR";
+	.key-result {
+		.tree-node:after {
+			content: "KR";
+		}
 	}
 
-	.tree:after {
-		content: "TR"
+	.tree {
+		.tree-node:after {
+			content: "TR";
+		}
 	}
 
-	.objective:after, .key-result:after, .tree:after {
-		font-size: 12px;
-		position: relative;
-		margin-left: -28px;
-		left: -40px;
-		top: 5px;
-		font-weight: 600;
-		color: $okraLightGreen;
+	.objective, .key-result, .tree {
+		.tree-node:after {
+			font-size: 12px;
+			position: absolute;
+			top: 7%;
+			right: 5%;
+			font-weight: 600;
+			color: #139e2a;
+		}
 	}
 
-	.objective.add-node:after, .key-result.add-node:after {
-		content: "";
+	.objective.add-node, .key-result.add-node {
+		.tree-node:after {
+			content: "";
+		}
 	}
 
 	.add-node {
