fixed bug with not being able to create keyresult with fresh objective

--- a/src/app/tree/node-modal-dashboard.tpl.html
+++ b/src/app/tree/node-modal-dashboard.tpl.html
@@ -43,8 +43,8 @@
 			</div>
 			<div layout="row" layout-align="center center" ng-if="modal.nodeType === 'Key Result'">
 				<div layout-align="start-start" layout="row" flex="100">
-					<md-switch ng-model="modal.node.priority" aria-label="Priority" ng-true-value="'High'" ng-false-value="'Low'" class="md-warn">
-					   {{modal.node.priority}} Priority
+					<md-switch ng-model="modal.node.Priority" aria-label="Priority" ng-true-value="'High'" ng-false-value="'Low'" class="md-warn">
+					   {{modal.node.Priority}} Priority
 					</md-switch>
 				</div>
 			</div>
