--- a/src/app/tree/node-modal-dashboard.tpl.html
+++ b/src/app/tree/node-modal-dashboard.tpl.html
@@ -41,20 +41,22 @@
 					</md-checkbox>
 				</div>
 			</div>
-			<div layout="row" layout-align="center center" ng-if="modal.nodeType === 'Key Result'">
+			<div layout="row" layout-align="center center" ng-if="modal.nodeType === 'Key Result' || modal.nodeType === 'Task'">
 				<div layout-align="start-start" layout="row" flex="100">
 					<md-switch ng-model="modal.node.Priority" aria-label="Priority" ng-true-value="'High'" ng-false-value="'Low'" class="md-warn">
 					   {{modal.node.Priority}} Priority
 					</md-switch>
 				</div>
 			</div>
+			<div layout="row" layout-align="center center">
+		    	<md-checkbox ng-model="modal.node.Completed" aria-label="completed">Completed?</md-checkbox> 
+			</div>
 		</form>
 	<md-content>
 	<div class="md-actions" style="border-top: none;" layout="row" layout-align="center end">
 		<md-button class="md-raised md-warn" ng-click="modal.closeModal()" aria-label="cancel">Cancel</md-button>
-		<md-button ng-if="!modal.editMode" class="md-raised md-primary" ng-click="modal.createNode()" aria-label="add">Add {{modal.name}}</md-button>
+		<md-button ng-if="!modal.editMode" class="md-raised md-primary" ng-click="modal.createNode()" aria-label="add">Create</md-button>
 		<md-button ng-if="modal.editMode"class="md-raised md-primary" ng-click="modal.updateNode()" aria-label="add">Save</md-button>
-		<md-checkbox ng-model="modal.node.Completed" aria-label="completed">Completed?</md-checkbox> 
 		<md-progress-circular ng-if="modal.currentlySaving" md-mode="indeterminate" md-diameter="20"></md-progress-circular>
 	</div>
 <md-dialog>
