--- a/src/app/tree/tree.tpl.html
+++ b/src/app/tree/tree.tpl.html
@@ -32,7 +32,7 @@
 	<!-- objectives -->
 	<div layout="row" class="collapse" layout-align="center center" id="objectiveNode">
 		<div class="objective" layout="row" layout-align="start" ng-repeat="objective in vm.tree.Objectives">
-			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Objective', objective, false)" class="tree-node" ng-class="{completed: objective.Completed === true}" layout-align="start" ng-show="!objective.isEditMode">
+			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Objective', objective, false, false)" class="tree-node" ng-class="{completed: objective.Completed === true}" layout-align="start" ng-show="!objective.isEditMode">
 				{{objective.Name}}
 				<md-tooltip ng-if="objective.Name.length > 14">
 					{{objective.Name}}
@@ -61,7 +61,7 @@
 	        </div>
 		</div>
 		<div class="objective add-node" layout="row" layout-align="start" ng-if="vm.tree.Objectives.length !== 4">
-			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Objective', {}, false)" class="tree-node" layout-align="start">
+			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Objective', {}, false, false)" class="tree-node" layout-align="start">
 				Add Objective <i class="fa fa-plus"></i>
 			</a>
 		</div>
@@ -70,7 +70,7 @@
 	<!-- key results -->
 	<div layout="row" class="collapse" layout-align="center center" id="keyResultNode">
 		<div class="key-result" layout="row" layout-align="start" ng-repeat="keyResult in vm.currentObjective.KeyResults">
-			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Key Result', keyResult, vm.currentObjective)" class="tree-node" ng-class="{completed: keyResult.Completed === true}" ng-show="!keyResult.isEditMode">
+			<a href ng-click="vm.openNodeModalDashboard($event, true, 'Key Result', keyResult, vm.currentObjective, false)" class="tree-node" ng-class="{completed: keyResult.Completed === true}" ng-show="!keyResult.isEditMode">
 				{{keyResult.Name}}
 				<md-tooltip ng-if="keyResult.Name.length > 14">
 					{{keyResult.Name}}
@@ -99,22 +99,20 @@
 	        </div>
 		</div>
 		<div class="key-result add-node" layout="row" layout-align="start" ng-if="vm.currentObjective.KeyResults.length !== 4">
-			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Key Result', {}, vm.currentObjective)" class="tree-node" layout-align="start">
+			<a href ng-click="vm.openNodeModalDashboard($event, false, 'Key Result', {}, vm.currentObjective, false)" class="tree-node" layout-align="start">
 				Add Key Result <i class="fa fa-plus"></i>
 			</a>
 		</div>
 	</div>
 
 	<!-- Tasks -->
-	<div layout="column" class="collapse" ok-collapse linked-to="taskNode" layout-align="space-around center" all-linked-nodes="vm.linkedNodeIds" id="taskNode">
-		<div layout="row" layout-align="start center">
-			<md-button class="md-primary md-raised">Add Task <i class="fa fa-plus"></i></md-button>
-		</div>		
-		<div layout="row" layout-align="start center" ng-repeat="task in vm.currentKeyResult.tasks">
+	<div layout="column" class="collapse" ok-collapse linked-to="taskNode" layout-align="space-around center" all-linked-nodes="vm.linkedNodeIds" id="taskNode">		
+		<div layout="row" layout-align="start center" ng-repeat="task in vm.currentKeyResult.Tasks">
 			<md-checkbox ng-model="task.complete" aria-label></md-checkbox>
-			<div class="task-node">
-				{{task.Name}}
-			</div>
+			<div class="task-node">{{task.Name}}</div>
+		</div>
+		<div layout="row" layout-align="start center">
+			<md-button ng-click="vm.openNodeModalDashboard($event, false, 'Task', {}, vm.currentObjective, vm.currentKeyResult)"class="md-primary md-raised">Add Task <i class="fa fa-plus"></i></md-button>
 		</div>
 	</div>
 </section>
