--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -284,6 +284,10 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .tree + .tree {
   margin-left: 25px;
 }
+.organization-wrapper .task-column {
+  max-height: 100%;
+  margin-bottom: 20px;
+}
 .organization-wrapper [layout-align="center center"], .organization-wrapper [layout-align="center"], .organization-wrapper [layout-align="start center"] {
   margin-top: 25px;
 }
