--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -91,6 +91,15 @@ md-checkbox:focus .md-label {
   margin-top: 15px;
 }
 
+body {
+  color: white;
+}
+
+md-content {
+  height: 100vh;
+  background: url("../../assets/footer_lodyas.png") !important;
+}
+
 .error-msg {
   color: #ef5350;
   opacity: 1;
