--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -97,7 +97,7 @@ body {
 
 md-content {
   height: 100vh;
-  background: url("../../assets/footer_lodyas.png") !important;
+  background: url("../../assets/texture.png") !important;
 }
 
 .error-msg {
