--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -107,7 +107,7 @@ body {
 
 md-content {
 	height: 100vh;
-	background: url('../../assets/footer_lodyas.png') !important;
+	background: url('../../assets/texture.png') !important;
 }
 
 .error-msg {
