--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -21,7 +21,6 @@
     color: white;
   }
 }
-
 @-moz-keyframes glowGreen {
   0% {
     color: #0d8120;
@@ -31,7 +30,6 @@
     color: white;
   }
 }
-
 @-ms-keyframes glowGreen {
   0% {
     color: #0d8120;
@@ -41,7 +39,6 @@
     color: white;
   }
 }
-
 @keyframes glowGreen {
   0% {
     color: #0d8120;
@@ -51,7 +48,6 @@
     color: white;
   }
 }
-
 md-item {
   margin: 0px 10px;
 }
@@ -91,13 +87,9 @@ md-checkbox:focus .md-label {
   margin-top: 15px;
 }
 
-body {
-  color: white;
-}
-
 md-content {
   height: 100vh;
-  background: url("../../assets/texture2.png") !important;
+  background-color: #2E2E2E !important;
 }
 
 .error-msg {
