--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -58,6 +58,8 @@ md-item {
 
 	md-content {
 		padding-bottom: 0px;
+		background-color: rgb(255,255,255) !important;
+		height: initial;
 	}
 
 	md-tooltip {
@@ -101,10 +103,12 @@ md-checkbox:focus .md-label {
 	}
 }
 //Global Styles ================================================================
+body {
+	color: $white;
+}
 
 md-content {
 	height: 100vh;
-	// background: url('../../assets/nn.png') !important;
 	background-color: #2E2E2E !important;
 }
 
