--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -20,7 +20,8 @@
 $white  : #ffffff;
 $black : #000000;
 $okraGreen : #99b742;
-$okraLightGreen : #99b742;
+$nodeColor : #ffffff;
+$bgColor: #2E2E2E;
 $grey : #C2C5C3;
 $warningRed : #ef5350;
 
@@ -60,6 +61,7 @@ md-item {
 		padding-bottom: 0px;
 		background-color: rgb(255,255,255) !important;
 		height: initial;
+		color: $bgColor;
 	}
 
 	md-tooltip {
@@ -214,7 +216,7 @@ ul.list-horizontal {
 		position: relative;
 		background-color: $grey;
 		@include border-radius(5px);
-		color: $white;
+		color: $nodeColor;
 		width: 155px;
 		white-space: nowrap;
 		overflow: hidden;
@@ -273,7 +275,7 @@ ul.list-horizontal {
 			top: 7%;
 			right: 5%;
 			font-weight: 600;
-			color: #139e2a;
+			color: $nodeColor;
 		}
 	}
 
@@ -287,7 +289,7 @@ ul.list-horizontal {
 		font-weight: 600;
 
 		.tree-node {
-			color: $okraLightGreen;
+			color: $nodeColor;
 		}
 	}
 
@@ -296,7 +298,7 @@ ul.list-horizontal {
 	}
 
 	.task-node {
-		background-color: $okraLightGreen;
+		background-color: $okraGreen;
 		padding: 10px 10px;
 		color: $white;
 		@include border-radius(5px);
