--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,17 +1,3 @@
-/*============================================================*/
-/*===================Table Of Contents========================*/
-/*============================================================*/
-/*=Variables==================18==============================*/
-/*=Mixins=====================26==============================*/
-/*=Toolbar Styles=============41==============================*/
-/*=Dialog/Modal Styles =======45==============================*/
-/*=Toast Styles ==============61==============================*/
-/*=Btn Styles ================68==============================*/
-/*=Input and form fields =====76==============================*/
-/*=Global Styles =============84==============================*/
-/*=Organization ==============149=============================*/
-/*=Login =====================202=============================*/
-/*=404Error===================239=============================*/
 @-webkit-keyframes glowGreen {
   0% {
     color: #99b742;
@@ -220,7 +206,7 @@ ul.list-horizontal li span.sub-text {
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   border-radius: 5px;
-  color: white;
+  color: #3c3a3a;
   width: 155px;
   white-space: nowrap;
   overflow: hidden;
@@ -264,7 +250,7 @@ ul.list-horizontal li span.sub-text {
   top: 7%;
   right: 5%;
   font-weight: 600;
-  color: white;
+  color: #3c3a3a;
 }
 .organization-wrapper .objective.add-node .tree-node:after, .organization-wrapper .key-result.add-node .tree-node:after {
   content: "";
@@ -273,7 +259,7 @@ ul.list-horizontal li span.sub-text {
   font-weight: 600;
 }
 .organization-wrapper .add-node .tree-node {
-  color: white;
+  color: #3c3a3a;
 }
 .organization-wrapper .key-result.add-node {
   font-size: 14px;
@@ -281,7 +267,7 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .task-node {
   background-color: #99b742;
   padding: 10px 10px;
-  color: white;
+  color: #3c3a3a;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -289,6 +275,7 @@ ul.list-horizontal li span.sub-text {
   min-width: 100px;
   margin-top: 10px;
   text-decoration: none;
+  width: 250px;
 }
 .organization-wrapper .objective + .objective,
 .organization-wrapper .key-result + .key-result,
@@ -299,6 +286,9 @@ ul.list-horizontal li span.sub-text {
 .organization-wrapper .task-column {
   max-height: 100%;
   margin-bottom: 20px;
+}
+.organization-wrapper .task-row .md-primary {
+  color: #3c3a3a !important;
 }
 .organization-wrapper [layout-align="center center"], .organization-wrapper [layout-align="center"], .organization-wrapper [layout-align="start center"] {
   margin-top: 25px;
