--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,18 +1,3 @@
-/*============================================================*/
-/*===================Table Of Contents========================*/
-/*============================================================*/
-/*=Variables==================18==============================*/
-/*=Mixins=====================26==============================*/
-/*=Toolbar Styles=============41==============================*/
-/*=Dialog/Modal Styles =======45==============================*/
-/*=Toast Styles ==============61==============================*/
-/*=Btn Styles ================68==============================*/
-/*=Input and form fields =====76==============================*/
-/*=Global Styles =============84==============================*/
-/*=Organization ==============149=============================*/
-/*=Login =====================202=============================*/
-/*=404Error===================239=============================*/
-
 //Imports
 @import "transitions.scss";
 @import "animations.scss";
@@ -20,7 +5,7 @@
 $white  : #ffffff;
 $black : #000000;
 $okraGreen : #99b742;
-$nodeColor : #ffffff;
+$nodeColor : #3C3A3A;
 $bgColor: #2E2E2E;
 $grey : #C2C5C3;
 $warningRed : #ef5350;
@@ -300,11 +285,12 @@ ul.list-horizontal {
 	.task-node {
 		background-color: $okraGreen;
 		padding: 10px 10px;
-		color: $white;
+		color: $nodeColor;
 		@include border-radius(5px);
 		min-width: 100px;
 		margin-top: 10px;
 		text-decoration: none;
+		width: 250px;
 	}
 
 	.objective + .objective, 
@@ -317,6 +303,12 @@ ul.list-horizontal {
 	.task-column {
 		max-height: 100%;
 		margin-bottom: 20px;
+	}
+
+	.task-row {
+		.md-primary {
+			color: $nodeColor !important;
+		}
 	}
 
 	[layout-align="center center"], [layout-align="center"], [layout-align="start center"] {
