--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -2,7 +2,7 @@
 @import "transitions.scss";
 @import "animations.scss";
 // Variables ====================================================================
-$white  : #ffffff;
+$white  : #8A8A8A;
 $black : #000000;
 $okraGreen : #99b742;
 $nodeColor : #3C3A3A;
@@ -38,6 +38,45 @@ $warningRed : #ef5350;
 // Toolbar Styles =================================================================
 md-item {
 	margin: 0px 10px;
+}
+
+.username {
+	text-align: center;
+}
+
+.md-toolbar-tools {
+	.fa {
+		font-size: 18px;
+	}
+}
+
+.organization-widget {
+	width: 200px;
+    position: absolute;
+    bottom: -180px;
+    left: 15px;
+    background: transparent;
+    border-radius: 5px;
+    border: 1px solid $okraGreen;
+    padding: 10px;
+    text-align: center;
+
+    .logo {
+    	width: 70px;
+        margin: 0 auto;
+       	display: block;
+    }
+
+    .org-name {
+    	margin-top: 20px;
+    	margin-bottom: 20px;
+    }
+
+    .md-raised {
+    	color: #ffffff !important;
+    	margin: 0 auto;
+    	display: block;
+    }
 }
 // Dialog/modal styles =========================================================
 .md-dialog-container {
@@ -89,9 +128,14 @@ md-checkbox:focus .md-label {
 		margin-top:15px;
 	}
 }
+
+md-checkbox .md-icon {
+	border-color: $white !important;
+}
 //Global Styles ================================================================
 body {
 	color: $white;
+	font-family: 'Raleway', sans-serif;
 }
 
 md-content {
@@ -274,12 +318,17 @@ ul.list-horizontal {
 		font-weight: 600;
 
 		.tree-node {
-			color: $nodeColor;
-		}
-	}
+			color: $white;
+			background: transparent;
+			border: 2px solid;
+			padding: 8px;
 
-	.key-result.add-node {
-		font-size: 14px;
+			.fa {
+				position: absolute;
+				top: 20px;
+				right: 20px;
+			}
+		}
 	}
 
 	.task-node {
@@ -307,7 +356,9 @@ ul.list-horizontal {
 
 	.task-row {
 		.md-primary {
-			color: $nodeColor !important;
+			background: transparent !important;
+			border: 2px solid;
+			color: $white !important;
 		}
 	}
 
